[tool.poetry]
name = "ixia"
version = "1.0.0"
description = "A library connecting secrets' security with random's usability"
authors = ["trag1c <trag1cdev@yahoo.com>"]
license = "MIT"
readme = "README.md"

[project]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"
maturin = "^0.13.6"

[tool.cibuildwheel]
build-frontend="build"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"
