[tool.poetry]
name = "ixia"
version = "1.0.4"
description = "A library connecting secrets' security with random's usability"
authors = ["trag1c <trag1cdev@yahoo.com>"]
license = "MIT"
readme = "README.md"

[project]
version = "1.0.4"
name = "ixia"
requires-python = ">=3.8"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"
maturin = "^0.13.6"

[tool.cibuildwheel]
build-frontend="build"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
