[tool.poetry]
name = "ixia"
version = "1.0.0"
description = "A library connecting secrets' security with random's usability"
authors = ["trag1c <trag1cdev@yahoo.com>"]
license = "MIT"
build = "build.py"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"

[build-system]
requires = ["poetry-core>=1.0.0", "mypy"]
build-backend = "poetry.core.masonry.api"
